<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="action_settings">Settings</string>
    <string name="text_miruna_btn">Miruna</string>
    <string name="text_title">my title</string>
    <string name="abracadabra">abracadabra</string>
    <string name="toast_main_message">my message main</string>
    <string name="text_title_constraint">Title constraint</string>
    <string name="hint_user">User</string>
    <string name="hint_password">Password</string>
    <string name="checkBox_label_remember">Remember me</string>
    <string name="btn_login_label">Login</string>
    <string name="btn_signUp_label">Sign up</string>
    <string name="btn_terms_label">Terms and conditions</string>
    <string name="btn_terms_accept">Accept</string>
    <string name="btn_terms_denied">Denied</string>
    <string name="label_terms">Terms and Conditions</string>
    <string name="label_createAccount">Create Account</string>
    <string name="hint_rePassword">Repeat Password</string>
    <string name="hint_description">Description</string>
    <string name="label_createAccount_create">Create Account</string>
    <string name="createAccount_dismiss_question">Are you sure you want to cancel?</string>
    <string name="all_ok">ok</string>
    <string name="all_cancel">cancel</string>
    <string name="login_dialog_title_warning">Wrong user</string>
    <string name="select_gender">Select gender</string>
    <string name="select_gender_placeholder">Select gender: %s</string>
    <string name="all_male">Male</string>
    <string name="all_female">Female</string>

    <plurals name="all_position">
        <item quantity="one">1st</item>
        <item quantity="two">2nd</item>
        <item quantity="other">other</item>
    </plurals>
    <string name="title_activity_lateral_menu">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="about_text">Lorem ipsum sin dolor Lorem ipsum sin dolor Lorem ipsum sin dolor Lorem ipsum sin dolor Lorem ipsum sin dolor  Lorem ipsum sin dolor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="send_email">Send Email</string>
    <string name="addUser_name">Name</string>
    <string name="addUser_age">Age</string>
    <string name="addUser_address">Address</string>
    <string name="all_save">Save</string>
    <string name="action_logout">Logout</string>

</resources>
