<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/tv_constraint_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_size"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_title_constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_constraint_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_constraint_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hint_user">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_constraint_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_constraint_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_constraint_user"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hint_password">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox_constraint_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_constraint_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/checkBox_label_remember"
        android:paddingStart="@dimen/small_size"
        android:layout_marginEnd="@dimen/default_margin"
        android:textAppearance="@style/AppearanceButton.Italic"
        />

    <Button
        android:id="@+id/btn_login_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/btn_login_label"
        android:onClick="doAction"
        android:textAppearance="@style/AppearanceButton"
        app:layout_constraintBottom_toTopOf="@id/btn_signUp_constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_constraint_remember"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_signUp_constraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_signUp_label"
        android:onClick="doAction"
        app:layout_constraintTop_toBottomOf="@id/btn_login_constraint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_login_constraint"
        app:layout_constraintEnd_toEndOf="@id/btn_login_constraint"
        android:textAppearance="@style/AppearanceButton"
        />

    <Button
        android:id="@+id/btn_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_terms_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/colorAccent"
        />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/img_termsAccepted"
        android:src="@drawable/ic_check_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_terms_conditions"
        app:layout_constraintTop_toTopOf="@id/btn_terms_conditions"
        app:layout_constraintStart_toEndOf="@id/btn_terms_conditions"
        />
</android.support.constraint.ConstraintLayout>